# aspeed-rust

./: Cargo.toml  anthony-rocha-2026-02-12.patch
docs/: i2c-core-review-email.txt  uart-refactoring-plan.md
src/: astdebug.rs  common.rs  lib.rs  main.rs  uart.rs
src/i2c_core/: constants.rs  controller.rs  global.rs  master.rs  mod.rs  slave.rs  timing.rs  transfer.rs  types.rs
src/spi/: block_device_adapter.rs  consts.rs  error.rs  fmccontroller.rs  mod.rs  norflash.rs  spicontroller.rs  spidmairqtest.rs  spim.rs  spitest.rs  traits.rs  types.rs  util.rs
src/tests/functional/: ecdsa_test.rs  gpio_test.rs  hash_test.rs  hmac_test.rs  i2c_core_test.rs  i2c_master_slave_test.rs  i2c_test.rs  rsa_test.rs  timer_test.rs
src/uart_core/: config.rs  controller.rs  error.rs  fifo.rs  hal_impl.rs  interrupt.rs  line_status.rs  mod.rs  types.rs
