[package]
name = "aspeed-ddk"
version = "0.1.0"
edition = "2021"

[features]
std = []
spi_dma = []
spi_dma_write = []
spi_monitor = []

[dependencies]
ast1060-pac = { git = "https://github.com/AspeedTech-BMC/ast1060-pac.git", features = ["rt"] }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal.git" , version = "1.0.0", package = "embedded-hal" }
embedded-io = "0.6.1"
embedded-hal-old = { git = "https://github.com/rust-embedded/embedded-hal.git" , rev = "599d44fdc7e709cb9ae6580ec11c0b7f7f102", package = "embedded-hal" }
fugit = "0.3.7"
proposed-traits = { git = "https://github.com/rusty1968/proposed_traits.git", package = "proposed-traits", rev = "c111f111c292766846c5b10c221339d5e39dea23" }
proposed-traits-latest = { git = "https://github.com/rusty1968/proposed_traits.git", package = "proposed-traits" , branch = "caliptra-test" }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.6.5", features = ["device"] }
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations



